--- a/FrmPrincipal/GestorArticulos_App.csproj
+++ b/FrmPrincipal/GestorArticulos_App.csproj
@@ -60,6 +60,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FrmGestor.resx">
+      <DependentUpon>FrmGestor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmPrincipal.resx">
       <DependentUpon>FrmPrincipal.cs</DependentUpon>
     </EmbeddedResource>
